# scRAW

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml  run_hyperparam_search.py  run_scraw_dedicated.py  run_seed_robustness.py  tmp_fake_basecfg_20260304_105147.h5ad  tmp_fake_fig_validation_20260304_104723.h5ad
configs/: default_scraw.json  default_scraw_py31012_test.json
docs/: scRAW_Default_Configuration.tex  scRAW_Scientific_Paper.tex
notebooks/: scraw_demo.ipynb
scripts/: nohup_regenerate_ablation_figures.sh  nohup_run_ablation_four_losses.sh  nohup_run_hyperparam_search.sh  nohup_run_hyperparam_search_dann.sh  nohup_run_ultra_search.sh  nohup_run_ultra_search_efficient.sh  run_ablation_four_losses.py  run_deep2_sweep.py  run_default_10seeds.sh  run_hyperparam_search.py  run_inference_from_checkpoint.py  run_optuna_refine_topk.py  run_optuna_ultra_search.py  run_regenerate_ablation_figures.py  run_seed_robustness.py  run_single.py
src/scraw/: __init__.py  clustering.py  config.py  metrics.py  model.py  pipeline.py  plots.py  preprocessing.py  trainer.py
src/scraw_dedicated/: ablation_four_losses.py  cli.py  deep2_sweep.py  defaults.py  hyperparam_search.py  metrics.py  optuna_refine_topk.py  optuna_ultra_search.py  preprocessing.py  presets.py  regenerate_ablation_figures.py  seed_robustness.py  visualization.py
src/scraw_dedicated/algorithms/: __init__.py  base_autoencoder.py  enhanced_autoencoder.py  scRAW.py  scraw_algorithm.py  scraw_clustering.py  (+1 more)
tests/: conftest.py  test_checkpoint_inference.py  test_pipeline.py  test_trainer.py
(+3 files in other folders)
