[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraw-dedicated"
version = "0.1.0"
description = "Standalone, simplified scRAW pipeline for Baron and Pancreas datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "anndata>=0.10",
  "scanpy>=1.10",
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "torch>=2.1",
  "hdbscan>=0.8",
  "umap-learn>=0.5",
]

[project.scripts]
scraw-run = "scraw_dedicated.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
